<resources>
    <string name="app_name">QuizBee</string>
    <string name="welcome">Welcome to ActivityQuestions!</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="option_a">Option A</string>
    <string name="next_question">Next Question</string>
    <string name="quit">Quit</string>
    <string name="your_score">Your Score</string>
    <string name="_0">0</string>
    <string name="question">Question</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="previous_scores">Previous Scores:</string>
    <string name="delete_account">Delete Account</string>
    <string name="image">Image</string>
    <string name="your_score_0">Your Score: 0</string>
    <string name="restart">Restart</string>
    <string name="go_back">Go Back</string>
    <string name="log_out">LOG OUT</string>
</resources>