<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@drawable/cover"
    tools:context=".ActivityQuestions">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="254dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/image"
        app:srcCompat="@drawable/o" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- TextView for Question -->
            <TextView
                android:id="@+id/tvque"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/question"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="20dp"/>

            <!-- RadioGroup for Options -->
            <RadioGroup
                android:id="@+id/answersgrp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/white">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/option_a"
                    android:textColor="@color/blue"/>

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/option_b"
                    android:textColor="@color/blue"/>

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/option_c"
                    android:textColor="@color/blue"/>

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/option_d"
                    android:textColor="@color/blue"/>

            </RadioGroup>

            <!-- Buttons for Next Question and Quit -->
            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/blue"
                android:text="@string/next_question"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/buttonquit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="#01579B"
                android:minHeight="48dp"
                android:text="@string/quit"
                android:textColor="#ffffff" />




        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
