<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat"

    android:gravity="center"
    android:background="@drawable/img_rectangle8"
    tools:context=".ResultActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="450dp"
        app:srcCompat="@drawable/quiz"
        android:contentDescription="@string/image" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="30dp"
        android:layout_marginTop="3000dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">
            <TextView
                android:id="@+id/tvres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/your_score_0"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnRestart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/blue"
                android:text="@string/go_back"
                android:textColor="#ffffff"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>
