<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".LandingPageActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="360dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:contentDescription="Welcome Image"
        android:src="@drawable/wel2" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edittext"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="Welcome to QuizBee!"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/startQuizButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/blue"
                android:text="@string/start_quiz"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/logOut"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/blue"
                android:text="@string/log_out"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/deleteAccountButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/blue"
                android:text="@string/delete_account"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <TextView
                android:id="@+id/previousScoresTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/previous_scores"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quizScoresTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@color/blue"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
